RESOLVED FIXED60304
REGRESSION (r77954): HTTP Live Streams have incorrect controller UI
https://bugs.webkit.org/show_bug.cgi?id=60304
Summary REGRESSION (r77954): HTTP Live Streams have incorrect controller UI
Eric Carlson
Reported 2011-05-05 15:06:05 PDT
<rdar://problem/9392609> HTTP Live Streams often continue to show "Loading..." in the controller status display after playback begins. Regression caused by r77954
Attachments
Proposed patch. (5.89 KB, patch)
2011-05-05 15:18 PDT, Eric Carlson
darin: review+
Eric Carlson
Comment 1 2011-05-05 15:18:58 PDT
Created attachment 92481 [details] Proposed patch.
Eric Carlson
Comment 2 2011-05-06 08:24:01 PDT
Ademar Reis
Comment 3 2011-05-10 13:49:19 PDT
Revision r85949 cherry-picked into qtwebkit-2.2 with commit b0d2aea <http://gitorious.org/webkit/qtwebkit/commit/b0d2aea>
Note You need to log in before you can comment on or make changes to this bug.