Source/WebCore/html/HTMLMediaElement.cpp
@@ -933,7 +933,7 @@ void HTMLMediaElement::setNetworkState(MediaPlayer::NetworkState state)
     }
 
     if (hasMediaControls())
-        mediaControls()->changedNetworkState();
+        mediaControls()->updateStatusDisplay();
 }
 
 void HTMLMediaElement::mediaPlayerReadyStateChanged(MediaPlayer*)
@@ -1025,8 +1025,11 @@ void HTMLMediaElement::setReadyState(MediaPlayer::ReadyState state)
         shouldUpdateDisplayState = true;
     }
 
-    if (shouldUpdateDisplayState)
+    if (shouldUpdateDisplayState) {
         updateDisplayState();
+        if (hasMediaControls())
+            mediaControls()->updateStatusDisplay();
+    }
 
     updatePlayState();
 }
