Source/WebCore/html/shadow/MediaControlRootElement.h
@@ -89,12 +89,12 @@ public:
     void exitedFullscreen();
 
     void reportedError();
-    void changedNetworkState();
     void loadedMetadata();
     void changedClosedCaptionsVisibility();
 
     void showVolumeSlider();
     void updateTimeDisplay();
+    void updateStatusDisplay();
 
 private:
     MediaControlRootElement(HTMLMediaElement*);
